--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,5 +28,5 @@ name: Package Application with Pyinstaller
   push:
     branches:
       - main
-    paths:
-      - src/**
+    # paths:
+    #   - src/**
