--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,5 @@
-docker==6.0.1
+coloredlogs==15.0.1
+docker==6.1.2
 PyYAML==6.0
-types-PyYAML==6.0.12.3
+requests<=2.29.0  # https://github.com/docker/docker-py/issues/3113
+# types-PyYAML==6.0.12.9
