--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: PyInstaller Linux
-        uses: JackMcKew/pyinstaller-action-linux@0.1.4
+        uses: JackMcKew/pyinstaller-action-linux@python3.10
         with:
           path: src
           spec: container-image-replicator-linux-x86_64.spec
@@ -28,5 +28,3 @@ name: Package Application with Pyinstaller
   push:
     branches:
       - main
-    # paths:
-    #   - src/**
