--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,8 +44,13 @@ repos:
         language_version: python3.11
     repo: https://github.com/psf/black
     rev: 23.3.0
-  - hooks:
-      - args: ["--strict", "--non-interactive", "--install-types", "--ignore-missing-imports"]
-        id: mypy
-    repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.3.0
+  # - hooks:
+  #     - args: ["--strict", "--non-interactive", "--install-types", "--ignore-missing-imports"]
+  #       id: mypy
+  #   repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.3.0
+  - repo: https://github.com/netromdk/vermin
+    rev: v1.5.1
+    hooks:
+      - id: vermin
+        args: ['-t=3.6-', '--violations']
