--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,30 +1,44 @@
+name: Package Application with Pyinstaller
+"on":
+  push:
+    branches: [ main ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: PyInstaller Linux
-        uses: JackMcKew/pyinstaller-action-linux@python3.10
-        with:
-          path: src
-          spec: container-image-replicator-linux-x86_64.spec
-      - name: PyInstaller Windows
-        uses: JackMcKew/pyinstaller-action-windows@python3-10-pyinstaller-5-3
-        with:
-          path: src
-          spec: container-image-replicator-windows-x86_64.spec
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: true
-          fail_on_unmatched_files: true
-          files: |
-            src/dist/linux/container-image-replicator-linux-x86_64
-            src/dist/windows/container-image-replicator-windows-x86_64.exe
-          prerelease: true
-name: Package Application with Pyinstaller
-'on':
-  push:
-    branches:
-      - main
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11.4'
+        architecture: 'x64'
+        cache: 'pip'
+        cache-dependency-path: |
+          src/requirements*.txt
+    - name: Install Dependencies
+      run: |
+        pip install -r src/requirements.txt
+    - name: Build Executable
+      uses: Nuitka/Nuitka-Action@main
+      with:
+        nuitka-version: main
+        script-name: container-image-replicator.py
+        onefile: true
+        working-directory: src
+    - name: Rename binary removing the .bin extension from Nuitka's default
+      run: |
+        mv src/build/container-image-replicator.bin src/build/container-image-replicator
+    - name: ${{ runner.os }} Release
+      uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        prerelease: true
+        fail_on_unmatched_files: false
+        files: |
+          src/build/container-image-replicator.exe
+          src/build/container-image-replicator
+          src/build/*.container-image-replicator.app/**/*
