--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,11 +14,11 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11.5'
+        python-version: '3.11.6'
         architecture: 'x64'
         cache: 'pip'
         cache-dependency-path: |
-          src/requirements*.txt
+          src/requirements.txt
     - name: Install Dependencies
       run: |
         pip install -r src/requirements.txt
@@ -30,9 +30,9 @@ jobs:
         script-name: container-image-replicator.py
         standalone: true
         working-directory: src
-    - name: Rename binary for Linux
-      if: runner.os == 'Linux'
-      run: mv src/build/container-image-replicator.bin src/build/container-image-replicator
+    # - name: Rename binary for Linux
+    #   if: runner.os == 'Linux'
+    #   run: mv src/build/container-image-replicator.bin src/build/container-image-replicator
     - name: Rename binary for macOS
       if: runner.os == 'macOS'
       run: mv src/build/container-image-replicator.bin src/build/container-image-replicator.mac
@@ -43,6 +43,6 @@ jobs:
         prerelease: true
         fail_on_unmatched_files: false
         files: |
-          src/build/container-image-replicator
+          src/build/container-image-replicator.bin
           src/build/container-image-replicator.exe
           src/build/container-image-replicator.mac
